make footer static to fix overlap

--- a/static/style.css
+++ b/static/style.css
@@ -4,7 +4,7 @@
 
 #footer {
     width: 100%;
-    position: fixed;
+    position: static;
     bottom: 10px;
 }
 
